--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* styles.css */
+
 :root {
     --black-color: #000;
 }
@@ -12,6 +14,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: rgb(35, 35, 35);
     color: #fff;
+    padding: 25px;
     
     
 }
@@ -20,6 +23,8 @@ body {
     text-align: justify;
     line-height: 25px;
 }
+
+
 
 
 #orange-text {
@@ -60,7 +65,7 @@ body {
 .silver-bg {
     background-color: darkslategray;
     padding: 20px;
-    margin: 20px;
+    
 }
 
 .form-box {
@@ -71,7 +76,7 @@ body {
 #dev-form {
     background-color: darkmagenta;
     padding: 20px;
-    margin: 20px;
+    
 }
 
 .submit-button {
